KYC del titular: el alta de clientes captura identidad (nombre, nacimiento, CURP, RFC, identificación, contacto, domicilio, PEP) y corre las comprobaciones en el acto (CURP y RFC con dígito verificador y consistencia, edad, documento vigente, unicidad, contacto, listas restringidas y PEP); estados PENDING/VERIFIED/REVIEW/REJECTED con expediente, revisión del analista con motivo y reverificación; ningún /cards/issue sin KYC verificado; proveedor de listas simulado o http como tercero KYC_SCREENING; consola con formulario, expediente y selector filtrado; e2e verify_kyc (23) y kyc_demo para los demás scripts; SchemaFixups para el CHECK de kyc.status
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>